--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,7 +9,7 @@
 	background-repeat : no-repeat;
   	overflow          : hidden;
   	background-size: 100px auto;
-}
+  }
 
 .noturn
 {
@@ -18,6 +18,8 @@
 	border-radius: 25px;
 	background-color: red;
   float:left;
+  padding:10px;
+  margin-right: 20px;
 }
 
 .turn
@@ -25,24 +27,36 @@
 	width: 100px;
 	height:200px;
 	border-radius: 25px;
-	background-color: green;
+	background-color: red;
   float:left;
+  border:solid;
+  padding:10px;
+  margin-right: 20px;
 }
 
 .centre
 {
   width: 100px;
   height:200px;
+  border: 1px solid;
   border-radius: 25px;
-  background-color: green;
+  background-color: white;
   float:left;
+  padding:10px;
+  margin-right: 20px;
 }
 
-.row{
-  width:100%;
-  /*display:block;*/
+img{
+  margin:30px;
 }
+
 
 #game-controls{
   clear:both;
+}
+
+#game-table{
+  text-align: center;
+  width:100%;
+  margin-left:30%;
 }
