--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,30 +2,38 @@
 
 <section id="game-table">
 
-  <header ng-show="snap">Snap!!!</header>
+  <header>
+    <h1 ng-show="snap">{{winner}}</h1>
+
+  </header>
 
   <div class="row">
-  <!--cpu cards-->
-  <div ng-class="{turn:playerTurn,noturn:!playerTurn}" >cpu</div>
 
-  <!--centrepile-->
-  <div class="centre">
-    <h1>{{centrePileCards[0].number}}</h1>
-    <img ng-class="{'spade':centrePileCards[0].suit=='s','heart':centrePileCards[0].suit=='h','diamond':centrePileCards[0].suit=='d','club':centrePileCards[0].suit=='c'}"/>
-  </div>
+    cpucards{{cpuCards}}
+    <!--cpu cards-->
+    <div ng-class="{turn:playerTurn,noturn:!playerTurn}">cpu</div>
 
-  <!--player cards-->
-  <div ng-class="{turn:!playerTurn,noturn:playerTurn}" ng-click="pickCard();">player</div>
+
+   centrecards {{centrePileCards}}
+    <!--centrepile-->
+    <div class="centre" ng-click="hitCentrePile()">
+      <h1>{{centrePileCards[0].number}}</h1>
+      <img
+        ng-class="{'spade':centrePileCards[0].suit=='s','heart':centrePileCards[0].suit=='h','diamond':centrePileCards[0].suit=='d','club':centrePileCards[0].suit=='c'}"/>
     </div>
 
-
+    playercards{{playerCards}}
+    <!--player cards-->
+    <div ng-class="{turn:!playerTurn,noturn:playerTurn}" ng-click="pickCard();">player</div>
+  </div>
 
 </section>
 
 <section id="game-controls">
 
-    <button>Check snap</button>
-    <button ng-click="dealCards()">start</button>
+  <button>Check snap</button>
+  <button ng-click="startGame()">start</button>
+  <button ng-click="SnapTest()">snap test</button>
 
 </section>
 
