--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -50,13 +50,24 @@ img{
   margin:30px;
 }
 
-
 #game-controls{
-  clear:both;
+
 }
 
 #game-table{
-  text-align: center;
-  width:100%;
-  margin-left:30%;
+  width:33%;
+  margin:auto;
 }
+
+#game-controls {
+  clear:both;
+  width: 25%;
+  margin: auto;
+  padding: 10px;
+}
+
+#game-controls .startbtn
+{
+  margin-bottom: 20px;
+}
+
